--- a/WebCoreProjesi/appsettings.json
+++ b/WebCoreProjesi/appsettings.json
@@ -2,9 +2,9 @@
     "AppSettings": {
         "MD5Salt": "D4AB56E7R4"
     },
-    "ConnectionStrings": {
-        "DefaultConnection": "server=203S-EGTMN;database=MVCCORE;Integrated Security=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=DESKTOP-HNE43R2;database=MVCCOREProjesi2;Integrated Security=True"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
